--- a/AzureStorage/appsettings.json
+++ b/AzureStorage/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StorageAccount": ""
+    "StorageAccount": "",
+    "KeyVaultUrl": ""
   }
 }
