--- a/AzureStorage/appsettings.json
+++ b/AzureStorage/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StorageAccount": "",
-    "KeyVaultUrl": ""
+    "StorageAccount": ""
+  },
+  "KeyVault": {
+    "VaultUri": "[From Azure]",
+    "ClientId": "[From Azure]",
+    "TenantId": "[From Azure]",
+    "ClientSecret": "[From Azure]"
   }
 }
