--- a/AzureStorage/Properties/launchSettings.json
+++ b/AzureStorage/Properties/launchSettings.json
@@ -15,7 +15,9 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5170",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://azrekvdemohilal.vault.azure.net/",
+        "AZURE_USERNAME": "hilal_yazbeck@hotmail.com"
       }
     },
     "https": {
@@ -24,14 +26,18 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7003;http://localhost:5170",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://azrekvdemohilal.vault.azure.net/",
+        "AZURE_USERNAME": "hilal_yazbeck@hotmail.com"
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://azrekvdemohilal.vault.azure.net/",
+        "AZURE_USERNAME": "hilal_yazbeck@hotmail.com"
       }
     }
   }
